2016/08/05:
%on_error_reduce declarations now have implicit priority levels, so as to
tell Menhir what to do when two such declarations are applicable.
Also, the well-formedness checks on %type and %on_error_reduce declarations
have been reinforced.

2016/06/23:
A small change in the generated code (both in the code and table back-ends) so
as to avoid OCaml's warning 41. The warning would arise (when compiling a
generated parser with OCaml 4.03) because Menhir's exception [Error] has the
same name as the data constructor [Error] in OCaml's pervasive library.
(Reported by Bernhard Schommer.)

2016/05/18:
Anonymous rules now work also when used inside a parameterized rule.
(This did not work until now.) When an anonymous rule is hoisted out
of a parameterized rule, it may itself become parameterized. Menhir
parameterizes it only over the parameters that it actually needs.

2016/05/04:
In the Coq backend, split the largest definitions into smaller
ones. This circumvents a limitation of vm_compute on 32 bit
machines. This also enables us to perform sharing between
definitions, so that the generated files are much smaller.

2016/04/10:
When printing a grammar (which is done by the --only-preprocess options),
remove the leading bar '|', for compatibility with yacc and bison.

2016/03/11:
In the code back-end, generate type annotations when extracting a semantic
value out of the stack. When working with a semantic value of some function
type, OCaml would incorrectly warn that this function does not use its
argument. This warning should now be gone.

2016/03/03:
Makefile changes, so as to support ocamlbuild 4.03, which seems to have
stricter hygiene rules than previous versions.

2015/12/30:
Prevented an incorrect installation that would take place if USE_OCAMLFIND
was given during "make all" but not during "make install". Added a command
line directive --suggest-ocamlfind.

2015/11/11:
Fixed a severe bug in Menhir 20151110 which (when using the code back-end)