@@ -1,3 +1,8 @@
+2016/08/25:
+Makefile fix, undoing a change made on 2016/03/03, which caused installation
+to fail under (some versions of?) Windows where dynamic linking is not
+supported. (Reported by Andrew Appel.)
+
 2016/08/05:
 %on_error_reduce declarations now have implicit priority levels, so as to
 tell Menhir what to do when two such declarations are applicable.
